Updating the documentation and minor text change on the front end view

--- a/src/Demo/FrontEndBundle/Resources/views/FrontEnd/index.html.twig
+++ b/src/Demo/FrontEndBundle/Resources/views/FrontEnd/index.html.twig
@@ -43,7 +43,7 @@
                 <img src = "{{asset('bundles/frontend/images/waiting.gif')}}" />
             </div>
         </form>
-        <h2>I would like to check if my details against my ID number</h2>
+        <h2>I would like to check my details against my ID number</h2>
         <form id = "formCheckIdNumber" method = "POST" class = "form">
             <div class="field">
                 <label for="idNumberCheck">ID Number</label>
